--- a/aerocock/packages.config
+++ b/aerocock/packages.config
@@ -1,4 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Caliburn.Micro" version="4.0.173" targetFramework="net461" />
+  <package id="Caliburn.Micro.Core" version="4.0.173" targetFramework="net461" />
+  <package id="Fody" version="6.5.2" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.31" targetFramework="net461" />
+  <package id="PropertyChanged.Fody" version="3.4.0" targetFramework="net461" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
